# Paid_Content_Service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
content_app/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
content_app/management/commands/: fill.py
content_app/migrations/: 0001_initial.py  0002_alter_channel_description_and_more.py  0003_remove_channel_cost_alter_publication_views_count.py  0004_alter_publication_views_count.py  0005_remove_channel_publications_count_and_more.py  0006_remove_payment_channel_remove_payment_link_and_more.py  0007_alter_channel_made_at.py  0008_publication_is_free_alter_publication_content_and_more.py  0009_publication_owner.py
content_app/templates/content_app/: base.html  channel_detail.html  channel_form.html  channel_list.html  home.html  publication_confirm_delete.html  publication_detail.html  sub_channels.html
content_app/templates/content_app/includes/: inc_main_menu.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_user_is_subscribed.py  0003_remove_user_is_subscribed.py  0004_alter_user_is_active.py  0005_alter_user_phone_number.py
users/templates/users/: cancel.html  login.html  register.html  success.html
